# Crown-Nexus

./: .buildinfo  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc-audit  AUTHORS.md  CHANGELOG.md  CODESTRIPPING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATABASE_STRUCTURE.md  DATABASE_STRUCTURE_NONTECH.md  LICENSE.txt  Media Generation.md  OUTLINE.md  README.md  SCHEMA.md  STRUCTURE.md  Usage Guide.md  WSLREADME.md  code-structure-mapper.py  code-structure-mapper2.py  developer_guide.html  frontend-stripper.py  frontend-structure-mapper.py  generate_processed_project.py  genindex.html  index.html  objects.inv  prepare-script.sh  py-modindex.html  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  search.html  searchindex.js  setup.py  setup_windows.sh  (+2 more)
backend/: .env.example  CORE_SYSTEMS.md  DEVELOPERS_GUIDE.md  IMPLEMENTATION.md  README.md  REFACTORING.md  alembic.ini  manage_db.py  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  test_db.py
backend/alembic/: env.py
backend/app/: as400_integration.md  main.py
backend/autocare/: ACES.xsd  PAdb_schema.sql  PCAdb_schema.sql  PCdb_schema.sql  PIES.xsd  Qdb_schema.sql  VCdb_light_power_schema.sql
backend/examples/: process_fitment.py
backend/migrations/: model_mappings_table.sql
backend/scripts/: auto_translate.py  bootstrap_countries.py  check_alembic_version_table.py  check_tables.py  create_admin.py  create_tables_directly.py  database_bootstrap.py  database_connection_info_check.py  init_db.py  (+5 more)
(+2439 files in other folders)
